Add a self-contained graph view, and fix determinism bugs it exposed
The visualization is one HTML file with no external script, stylesheet, font, or
CDN reference, so it opens from disk on an air-gapped machine. Layout is a seeded
force simulation run to a fixed iteration count, then normalized to a fixed extent,
so the same graph draws the same picture at a readable zoom every time.

Confidence is drawn rather than hidden: edges below 0.95 are dashed and coloured,
a slider hides everything under a chosen confidence, and clicking a node shows its
declaring file and line with the resolver behind every relationship. Scope selects
what is worth drawing (operational, architecture, or one symbol's context packet)
and truncation keeps the highest-degree nodes and says so.

GraphML, DOT, and Cytoscape JSON exports carry resolver and confidence through, so
the graph is not trapped behind our own viewer.

Building this exposed two real determinism bugs, both the same mistake in different
places: Set.of and Map.of randomize iteration order per JVM run, and that order was
reaching the graph.

- SpringModelEnricher iterated a Set.of of guard annotations and immutable attribute
  maps, varying the order guard and property edges were created.
- Modules wrapped a sorted coupling map in Map.copyOf, which discarded the ordering
  and varied the emitted module dependency edges.

Petclinic exports differed between runs because of these; the CI gate missed it
because the fixture had no guards, no configuration properties, and no module with
two coupling targets. The fixture now has all three, the gate diffs three runs
rather than two, and a new check fails if any layer stops being represented in it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>